--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,7 @@ en:
     errors:
       messages:
         record_invalid: 'Validation failed: %{errors}'
+        record_not_found: 'record_not_found'
         restrict_dependent_destroy:
           has_one: 'Cannot delete record because a dependent %{record} exists'
           has_many: 'Cannot delete record because dependent %{record} exist'
@@ -17,6 +18,37 @@ en:
             email:
               invalid: 'Invalid email'
               taken: 'User with this email already exists'
+    attributes:
+      patients: 'Patients'
+      doctors: 'Doctors'
+      user:
+        email: 'Email'
+        name: 'Name'
+        avatar: 'Avatar'
+        password: 'Password'
+        password_confirmation: 'Password Confirmation'
+        sign_in: 'Sign in'
+        sign_out: 'Sign out'
+        sign_up: 'Sign up'
+        log_in: 'Log in'
+        save: 'Save'
+        back: 'Back'
+        update: 'Update'
+        or: 'or'
+        edit_profile: 'Edit Profile'
+        delete_profile: 'Delete profile'
+        change_password: 'Change password'
+        current_user: 'You are not the current user'
+        cancel_account: 'Cancel my account'
+        unhappy: 'Unhappy?'
+        delete_profile_confirm: 'Are you sure?'
+      doctor_profile:
+        save: 'Save'
+        back: 'Back'
+        or: 'or'
+    app:
+      name: 'Clinic'
+      url: 'clinic.com'
   date:
     abbr_day_names:
       - Sun
@@ -229,7 +261,21 @@ en:
       users:
         updated: 'You have updated your profile'
         destroyed: 'User was successfully deleted :('
+      profile:
+        not_your: 'This is not your profile!'
       subscriptions:
         created: 'You are subscribed to this event'
         destroyed: 'Member unsubscribed'
         error: 'Subscribe / unsubscribe did not work'
+  view:
+    user:
+      username: 'username'
+      email: 'email'
+      phone_number: 'phone number'
+      type:
+        doctor: 'Doctor'
+        patient: 'Patient'
+    doctor_profile:
+      new: 'Doctor profile new'
+      edit: 'Doctor profile edit'
+
