--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -43,9 +43,9 @@ ua:
         cancel_account: 'Скасувати мій обліковий запис'
         unhappy: 'Нещасливий?'
         delete_profile_confirm: 'Ти впевнений?'
-        phone_number: 'номер телефону +380'
-        user_type: 'тип користувача'
-        username: "ім'я користувача"
+        phone_number: 'Номер телефону +380'
+        user_type: 'Виберіть тип користувача'
+        username: "Ім'я користувача"
       doctor_profile:
         save: 'Зберегти'
         back: 'Повернуться'
