--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -18,6 +18,11 @@ ua:
             email:
               invalid: 'Недійсна електронна адреса'
               taken: 'Користувач із цією електронною адресою вже існує'
+        appointment:
+          attributes:
+            visit_time: 'Час візиту має бути більшим за поточну дату'
+            time_busy: 'Цей час %{time} недоступний'
+            day_busy: 'Цей день %{day} зайнятий, запішиться на наступний'
     attributes:
       patients: 'Пацієнти'
       doctors: 'Лікарі'
