--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -382,3 +382,17 @@ ua:
       new_appointment: 
         patient: 'Заброньован новий визіт к доктору %{name} %{categories} на %{visit_time}.'
         doctor: 'До вас заброньован новий визіт %{visit_time} , забронював %{name}.'
+  mailers:
+    subjects:
+      patient_new_appointment_email: 'Визіт до доктора'
+      doctor_new_appointment_email: 'Визіт до доктора'
+    patient_new_appointment_email:
+      title: 'Вітаю '
+      body: 'Заброньован новий визіт к доктору %{doctor_name} %{categories} на %{visit_time}.'
+    doctor_new_appointment_email:
+      title: 'Вітаю '
+      body: 'До вас заброньован новий визіт %{visit_time} , забронював %{patient_name}.'
+      link: 'Подивитись визіт'
+    email: 'clinic@mail.com'
+    subscribe: 'подпісітися'
+    unsubscribe: 'відписатися'
