create doctor search

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -320,6 +320,7 @@ en:
     make_an_appointment: 'Make an appointment'
     doctors: 'Doctors'
     patients: 'Patients'
+    doctors_search: 'Doctors search'
     appointments:
       edit: 'Edit doctor record'
       visit_time: 'Visit date & time'
