--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -371,7 +371,8 @@ ua:
     make_an_appointment: 'Записатися на прийом'
     doctors: 'Лікарі'
     patients: 'Пацієнти'
-    doctors_search: 'Пошук лікарів'
+    search_search: 'Пошук лікарів'
+    categories_search: 'Пошук Категорії'
     appointments:
       edit: 'Редагувати запис до лікаря'
       visit_time: 'Дата та час відвідування'
