--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -348,3 +348,7 @@ en:
   pages:
     secret:
       choose_collor: 'Choose color'
+      clear: 'Space is clear'
+      button: 'Clear'
+      button_last: 'Remove last'
+      last: 'Removed'
