--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -399,3 +399,7 @@ ua:
   pages:
     secret:
       choose_collor: 'Оберіть колір'
+      clear: 'Простір очіщено'
+      button: 'Очистити'
+      button_last: 'Видалити останне'
+      last: 'Видален'
