--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -337,6 +337,7 @@ en:
     subjects:
       patient_new_appointment_email: 'A visit to the doctor'
       doctor_new_appointment_email: 'A visit to the doctor'
+      remaind_appointment_email: 'Visit reminder'
     patient_new_appointment_email:
       title: 'Hello '
       body: 'Booked a new visit to doctor %{doctor_name} %{categories} at %{visit_time}.'
@@ -344,6 +345,7 @@ en:
       title: 'Hello '
       body: 'A new appointment is booked for you on %{visit_time}, booked by %{patient_name}'
       link: 'View visit'
+    remaind_appointment_email: 'This is an unobtrusive reminder.'
     email: 'clinic@mail.com'
     subscribe: 'subscribe'
     unsubscribe: 'unsubscribe'
