--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -350,6 +350,9 @@ ua:
       updated: 'Ви оновили призначення'
       create: 'Завітати до лікаря'
       created: 'Запис збережено'
+    note:
+      edit: 'Ви не можете редагувати цю нотатку'
+      updated: 'Примітку оновлено'
   view:
     user:
       username: "ім'я користувача"
@@ -379,6 +382,13 @@ ua:
       description: 'Опис'
       new: 'Новий визіт'
     doctor_size: 'Кількість Лікарів'
+    datetime: 'День та час'
+    notes:
+      new: 'Нова нотатка'
+      all: 'Нотатки'
+      id: '№'
+      date: 'Дата'
+      body: 'Текст'
   message:
     sms:
       new_appointment: 
