--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -68,6 +68,10 @@ ua:
         save: 'Зберегти'
         back: 'Повернуться'
         or: 'або'
+      note:
+        save: 'Зберегти'
+        back: 'Повернуться'
+        or: 'або'
     app:
       name: 'Поліклініка'
       url: 'clinic.com'
@@ -384,6 +388,7 @@ ua:
     doctor_size: 'Кількість Лікарів'
     datetime: 'День та час'
     notes:
+      edit: 'Редагувати запис'
       new: 'Нова нотатка'
       all: 'Нотатки'
       id: '№'
