--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -361,6 +361,8 @@ ua:
     watching:
       delete: 'Видалити'
       delete_confirm: 'Ти впевнений?'
+      ips: 'IPs'
+      destroyed: 'Watching успішно видалено :('
     user:
       username: "ім'я користувача"
       email: 'електронна адреса'
