--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -313,6 +313,8 @@ en:
     watching:
       delete: 'Delete'
       delete_confirm: 'Are you sure?'
+      ips: 'IPs'
+      destroyed: 'Watching was successfully deleted :('
     user:
       username: 'username'
       email: 'email'
